# shadow_mem

./: README.md  malloctrace.cpp
dynamorio/: README  TODO.txt  inst_handle.c  memtrace.c  memtrace.h  memtrace2.c  memtrace2.h  profiler.c  profiler.h  shadow_map.c  shadow_map.h  syscall_handle.c
dynamorio/inst_count/: inscount.c
pin/: .malloctrace.cpp.swp  .pin_mem_profiler.cpp.swp  Makefile  compile  inst_handle.cpp  inst_handle.h  malloctrace.cpp  malloctrace.out  pin_mem_profiler.cpp  pin_mem_profiler.h  profiler.out  run  shadow_map.cpp  shadow_map.h  syscall_handle.cpp  syscall_handle.h
valgrind/: Makefile.am  README  configure.in
valgrind/profiler/: Makefile.am  pf_include.h  pf_inst_handle.c  pf_main.c  pf_shadow_map.c  pf_syscall_handle.c
